--- a/setup.cfg
+++ b/setup.cfg
@@ -12,6 +12,7 @@ license = MIT
 license_files = LICENSE.txt
 long_description = file: README.rst
 long_description_content_type = text/x-rst; charset=UTF-8
+version = 1.0.0
 url = https://github.com/pyscaffold/pyscaffold/
 # Add here related links, for example:
 project_urls =
